--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "build": "^0.1.4",
+    "deploy": "^1.0.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "aws s3 sync build/ s3://portfolio-hf",
+    "deploy": "aws s3 sync build/ s3://portfolio-react-site",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
