--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "build": "^0.1.4",
+    "caniuse-lite": "^1.0.30001214",
     "deploy": "^1.0.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
@@ -20,7 +21,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
