--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Build React App
       run: yarn install && yarn run build
     - name: Deploy app build to S3 bucket
-      run: aws s3 sync ./build/ s3://hamidreza-portfolio --delete
+      run: aws s3 sync .frontend/build/ s3://hamidreza-portfolio --delete
