--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,6 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
     - name: Build React App
-      run: yarn install && yarn run build
+      run: yarn install && yarn build
     - name: Deploy app build to S3 bucket
       run: aws s3 sync ./frontend/build/ s3://hamidreza-portfolio --delete
